--- a/index.html
+++ b/index.html
@@ -693,18 +693,12 @@
 			</div>
 		</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
+		<script type="module">
+			import Reveal from 'dist/reveal.esm.js'
+			import Markdown from 'plugin/markdown/markdown.esm.js'
+			import RevealHighlight from 'plugin/highlight/highlight.esm.js'
+			import RevealNotes from 'plugin/notes/notes.esm.js'
 			Reveal.initialize({
-				hash: true,
-
-				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
 			})
 		</script>
