feat: add images

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 							style="background: rgba(255, 255, 255, 0.1); float: left"
 							height="300px"
 							data-src="./images/hto-ja.png"
-							alt="Down arrow"
+							alt="Who am I"
 						/>
-							<div>👋 Евгений, три года c вами учусь.</div>
+							<div>👋 Евгений, учусь на Прикладной информатике БГУ</div>
 						</div>
 						<small>Работаю Frontend-разработчиком (JS/TS, Angular/React)</small>
 
