fix: fix relative links

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
 		<title>reveal.js</title>
 
-		<link rel="stylesheet" href="dist/reset.css" />
-		<link rel="stylesheet" href="dist/reveal.css" />
-		<link rel="stylesheet" href="dist/theme/black.css" />
+		<link rel="stylesheet" href="./dist/reset.css" />
+		<link rel="stylesheet" href="./dist/reveal.css" />
+		<link rel="stylesheet" href="./dist/theme/black.css" />
 
 		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css" />
+		<link rel="stylesheet" href="./plugin/highlight/monokai.css" />
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
 				<section
 					data-markdown
-					data-background-image="images/gears-on-the-bottom_wide.jpg"
+					data-background-image="./images/gears-on-the-bottom_wide.jpg"
 					data-background-opacity="0.4"
 				>
 					<textarea data-template>
@@ -694,10 +694,10 @@
 		</div>
 
 		<script type="module">
-			import Reveal from 'dist/reveal.esm.js'
-			import Markdown from 'plugin/markdown/markdown.esm.js'
-			import RevealHighlight from 'plugin/highlight/highlight.esm.js'
-			import RevealNotes from 'plugin/notes/notes.esm.js'
+			import Reveal from './dist/reveal.esm.js'
+			import Markdown from './plugin/markdown/markdown.esm.js'
+			import RevealHighlight from './plugin/highlight/highlight.esm.js'
+			import RevealNotes from './plugin/notes/notes.esm.js'
 			Reveal.initialize({
 				plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
 			})
