--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
 		<script type="module">
 			import Reveal from './dist/reveal.esm.js'
-			import Markdown from './plugin/markdown/markdown.esm.js'
+			import RevealMarkdown from './plugin/markdown/markdown.esm.js'
 			import RevealHighlight from './plugin/highlight/highlight.esm.js'
 			import RevealNotes from './plugin/notes/notes.esm.js'
 			Reveal.initialize({
